# crm-wirzzard

./: Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml
app/: db.sqlite3
app/app/: asgi.py  settings.py  urls.py
app/main/: admin.py  admin_utils.py  apps.py  models.py  models_utils.py
app/main/migrations/: 0001_initial.py  0002_orderline_price_by_order.py  0003_alter_orderreport_result_file.py  0004_alter_orderreport_result_file.py  0005_alter_orderline_count_alter_orderreport_result_file.py
