[tool.poetry]
name = "crm-wirzzard"
version = "0.1.0"
description = ""
authors = ["Germakhanov Magomed"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
pillow = "^10.3.0"
pandas = "^2.2.2"
openpyxl = "^3.1.3"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
